1769 dladm show-link truncates OVER field